# data_science_playground

./: .gitignore  README.md  eda_test.ipynb  hello_world.ipynb  pyproject.toml
docs/: progress_log.md  terminal_learning_notes.md
